plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'com.diffplug.spotless' version '8.9.0'
	id 'maven-publish'
}

version = "${project.minecraft_version}-b${project.build_number}"
group = project.maven_group

base {
	archivesName = project.release_name
}

repositories {
	maven { url 'https://maven.wispforest.io' }
	maven { url 'https://maven.shedaniel.me' }
	maven { url 'https://jitpack.io' }
	mavenCentral()
}

configurations.configureEach {
	resolutionStrategy.eachDependency { details ->
	if (details.requested.group == 'io.netty' && details.requested.name == 'netty-codec-http') {
			details.useVersion('4.2.10.Final')
			details.because('CVE-2026-33870')
		}
		if (details.requested.group == 'org.apache.logging.log4j' && details.requested.name == 'log4j-core') {
			details.useVersion('2.25.4')
			details.because('CVE-2026-34478, CVE-2026-34480, CVE-2026-34477')
		}
	}
}

spotless {
	java {
		palantirJavaFormat()
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	add("modImplementation", "net.fabricmc:fabric-loader:${project.loader_version}")

	add("modImplementation", "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}")
	add("modImplementation", "io.wispforest:owo-lib:${project.owo_version}")
	annotationProcessor "io.wispforest:owo-lib:${project.owo_version}"
	compileOnly "me.shedaniel:RoughlyEnoughItems-api:${project.rei_version}"
}

def localTests = file("local-tests.gradle")
if (localTests.exists()) {
	apply from: localTests
}

def startupWebhookKey = providers.gradleProperty("itemeditorStartupWebhookKey")
		.orElse(providers.environmentVariable("ITEMEDITOR_STARTUP_WEBHOOK_KEY")).getOrElse("")
def activeWebhookKey = providers.gradleProperty("itemeditorActiveWebhookKey")
		.orElse(providers.environmentVariable("ITEMEDITOR_ACTIVE_WEBHOOK_KEY")).getOrElse("")

processResources {
	def modVersion = "${project.build_number}"
	inputs.property "version", modVersion
	inputs.property "startupWebhookKey", startupWebhookKey
	inputs.property "activeWebhookKey", activeWebhookKey

	filesMatching("fabric.mod.json") {
		expand "version": modVersion,
				"startup_webhook_key": startupWebhookKey,
				"active_webhook_key": activeWebhookKey
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	repositories {
	}
}
